; ModuleID = '/home/carl/AnghaBench/linux/drivers/media/platform/sti/delta/extr_delta-ipc.c_delta_ipc_probe.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/media/platform/sti/delta/extr_delta-ipc.c_delta_ipc_probe.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.rpmsg_device = type { %struct.TYPE_2__ }
%struct.TYPE_2__ = type { i32 }
%struct.rpmsg_driver = type { i32 }
%struct.delta_dev = type { %struct.rpmsg_device* }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.rpmsg_device*)* @delta_ipc_probe to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @delta_ipc_probe(%struct.rpmsg_device* %0) #0 {
  %2 = alloca %struct.rpmsg_device*, align 8
  %3 = alloca %struct.rpmsg_driver*, align 8
  %4 = alloca %struct.delta_dev*, align 8
  store %struct.rpmsg_device* %0, %struct.rpmsg_device** %2, align 8
  %5 = load %struct.rpmsg_device*, %struct.rpmsg_device** %2, align 8
  %6 = getelementptr inbounds %struct.rpmsg_device, %struct.rpmsg_device* %5, i32 0, i32 0
  %7 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %6, i32 0, i32 0
  %8 = load i32, i32* %7, align 4
  %9 = call %struct.rpmsg_driver* @to_rpmsg_driver(i32 %8)
  store %struct.rpmsg_driver* %9, %struct.rpmsg_driver** %3, align 8
  %10 = load %struct.rpmsg_driver*, %struct.rpmsg_driver** %3, align 8
  %11 = call %struct.delta_dev* @to_delta(%struct.rpmsg_driver* %10)
  store %struct.delta_dev* %11, %struct.delta_dev** %4, align 8
  %12 = load %struct.rpmsg_device*, %struct.rpmsg_device** %2, align 8
  %13 = load %struct.delta_dev*, %struct.delta_dev** %4, align 8
  %14 = getelementptr inbounds %struct.delta_dev, %struct.delta_dev* %13, i32 0, i32 0
  store %struct.rpmsg_device* %12, %struct.rpmsg_device** %14, align 8
  ret i32 0
}

declare dso_local %struct.rpmsg_driver* @to_rpmsg_driver(i32) #1

declare dso_local %struct.delta_dev* @to_delta(%struct.rpmsg_driver*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
